--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pandas==1.5.3
-plotly==5.14.1
-streamlit==1.23.1
-openpyxl==3.1.1
-yfinance==0.2.38
+pandas==2.1.1
+plotly==5.22.0
+streamlit==1.38.0
+openpyxl==3.1.3
+python-dotenv==1.0.0
+numpy==1.26.0
+requests==2.31.0
+psutil
+yfinance==0.2.64
 pyportfolioopt==1.5.5
-streamlit-lottie==0.0.5
-
